[fix] navgar align, toggle, search icon

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -49,12 +49,15 @@
 }
 
 .nav_search {
-
+    margin-left: 1rem;
+}
+.nav_search img{
+    width: 2rem;
 }
 
 .nav_main_title {
     font-family: 'GmarketSansBold';
-    font-size: 40px;
+    font-size: 38px;
     color: #CEC4B3;
 }
 
@@ -80,14 +83,20 @@
 }
 
 .nav_vertical h6 {
-    font-family: 'GmarketSansMedium';
+    font-family: var(--btn-font);
     font-size: 12px;
-    color: #707070;
+    color: #A9A59F;
 }
 
 .user_btn {
-    display: flex;
-    flex-direction: column;
+    text-align: center;
+    width: 60px;
+}
+
+.user_btn h6 {
+    font-family: var(--btn-font);
+    font-size: 12px;
+    color: #A9A59F;
 }
 
 .toggle_btn {
@@ -99,6 +108,30 @@
     border-radius: 10px;
     text-align: center;
     line-height: 34px;
+    border: none;
+}
+
+.toggle {
+    position: absolute;
+    top: 104px;
+    right: 16px;
+    flex-direction: column;
+    background: white;
+    /* border: solid 1px var(--text-color); */
+    line-height: 1.3125rem;
+    border-radius: 4px;
+    padding: 1rem;
+    flex-direction: column;
+    font-size: 0.875rem;
+    font-family: var(--btn-font);
+    text-decoration: none;
+    box-shadow: rgb(0 0 0 / 3%) 0px 4px 16px 0px;
+    transition: box-shadow 0.25s ease-in 0s, transform 0.25s ease-in 0s;
+    display: flex;
+}
+
+.toggle a {
+    color: #A9A59F;
 }
 
     
